# Chess-bot

./: .breakpoints  Bestmove.py  Bishopm.py  Characters.py  GoodClasses.py  LMFPGC.py  Legalm.py  Oldpawn.py  Open.py  Pawn.py  Pawn2.py  Queen.py  SPAWN.py  cordinates.py  king.py  knight.py  main.py  piecevalue.py  pyproject.toml  rook.py
