[tool.poetry]
name = "repl_python3_Group-chess"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
characters = "^0.1.0"
co = "^0.2.0"
python-vlc = "^3.0.12118"
cl-chess = "^1.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
